<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <include layout="@layout/header_all"/>
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_marginTop="@dimen/y80"
	    android:padding="@dimen/x20">
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="@dimen/x15"
		    android:orientation="horizontal">
		    <TextView android:id="@+id/jve_id_findPwsd_usernameText"
		        android:layout_width="@dimen/x80"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/x10"
		        android:text="@string/jve_str_findPswdPage_str3"/>
		    <EditText android:id="@+id/jve_id_findPwsd_username"
		        android:layout_width="@dimen/x200"
		        android:layout_height="@dimen/y25"
		        android:paddingLeft="10dp"
		        android:singleLine="true"
		        android:textSize="@dimen/x10"
		        android:background="@drawable/box_icon"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="@dimen/x15"
		    android:orientation="horizontal">
		    <TextView android:id="@+id/jve_id_findPwsd_phoneNumText"
		        android:layout_width="@dimen/x80"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/x10"
		        android:text="@string/jve_str_findPswdPage_str2"/>
		     <EditText android:id="@+id/jve_id_findPwsd_phoneNum"
		        android:layout_width="@dimen/x200"
		        android:layout_height="@dimen/y25"
		        android:paddingLeft="10dp"
		        android:inputType="phone"
		        android:singleLine="true"
		        android:textSize="@dimen/x10"
		        android:background="@drawable/box_icon"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="@dimen/x60"
		    android:orientation="horizontal">
		    <TextView android:id="@+id/jve_id_findPwsd_codeText"
		        android:layout_width="@dimen/x80"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/x10"
		        android:text="@string/jve_str_findPswdPage_str4"/>
		     <EditText android:id="@+id/jve_id_findPwsd_code"
		        android:layout_width="@dimen/x100"
		        android:layout_height="@dimen/y25"
		        android:paddingLeft="10dp"
		        android:singleLine="true"
		        android:textSize="@dimen/x10"
		        android:background="@drawable/box_icon"/>
		     <Button android:id="@+id/jve_id_findPwsd_getCodeBtn"
			    android:layout_width="@dimen/x85"
			    android:layout_height="@dimen/y25"
			    android:layout_marginLeft="@dimen/x15"
			    android:background="@drawable/button_selector_blue"
			    android:text="@string/jve_str_findPswdPage_str7"
			    android:textColor="@color/jve_color_white"
			    android:textSize="@dimen/x12"/>
		</LinearLayout>
		<Button android:id="@+id/jve_id_findPwsd_nextBtn"
		    android:layout_width="@dimen/x260"
		    android:layout_height="@dimen/y25"
		    android:layout_gravity="center_horizontal"
		    android:background="@drawable/button_selector_blue"
		    android:text="@string/jve_str_findPswdPage_str8"
		    android:textColor="@color/jve_color_white"
		    android:textSize="@dimen/x12"/>
	</LinearLayout>
</LinearLayout>
